bug 68472 - avoid crash on shutdown in xlib. patch by Roland.Mainz@informatik.med.uni-giessen.de r=blizzard, sr=shaver, a=roc+moz Not part of build.